# work-tracker

./: .gitignore  Cargo.toml  README.md  save.json
src/: main.rs  payment.rs  project.rs  state.rs  work_slice.rs
src/state/: changes.rs  config.rs  errors.rs  initial_data.rs  payment.rs  project.rs  work_slice.rs
track_work/: Cargo.toml
track_work/src/: errors.rs  initial_data.rs  payment.rs  project.rs  work_slice.rs
