[package]
name = "work-tracker"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
tokio = { version = "1.39.2", features = ["tokio-macros", "full"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
