[package]
name = "work-tracker"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["tokio-macros", "full"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
